@@ -1,7 +1,7 @@
 Bees ETC PO:
   enabled: false
-  tags:
-  - other
+  # tags:
+  # - other
   variationof: Bees TT PO
   enmp_index: 999
   model: F_PO090_ETC
@@ -15,8 +15,8 @@ Bees ETC PO:
       - 3
 Bees TT PO:
   enabled: false
-  tags:
-  - other
+  # tags:
+  # - other
   enmp_index: 999
   model: F_PO090_TT
   obj_id: 2138
@@ -166,8 +166,8 @@ Bulky Vendor:
   model: M_EX590
   obj_id: 75
   size: 0
-  tags:
-  - other
+  # tags:
+  # - other
   type: enemy
   variations:
     Bulky Vendor (Disappears):
@@ -180,8 +180,8 @@ Bulky Vendor:
       - 0
 Bulky Vendor (NM):
   enabled: false
-  tags:
-  - other
+  # tags:
+  # - other
   enmp_index: 999
   model: M_EX590_NM
   obj_id: 2509
@@ -704,9 +704,9 @@ Trick Ghost (NM):
       - 0
       - 0
 Undead Pirate A:
-  aimods:
-  - name: B_CA020/b_ca.bdscript
-    type: obj
+  # aimods:
+  # - name: B_CA020/b_ca.bdscript
+  #   type: obj
   enabled: true
   enmp_index: 999
   model: B_CA020
@@ -753,9 +753,9 @@ Undead Pirate A:
       - 91
       - 0
 Undead Pirate B:
-  aimods:
-  - name: B_CA030/b_ca.bdscript
-    type: obj
+  # aimods:
+  # - name: B_CA030/b_ca.bdscript
+  #   type: obj
   enabled: true
   enmp_index: 999
   isnightmare: true
@@ -783,9 +783,9 @@ Undead Pirate B:
       - 92
       - 0
 Undead Pirate C:
-  aimods:
-  - name: B_CA040/b_ca.bdscript
-    type: obj
+  # aimods:
+  # - name: B_CA040/b_ca.bdscript
+  #   type: obj
   enabled: true
   enmp_index: 999
   model: B_CA040
@@ -1411,8 +1411,8 @@ Barrel:
       - 0
 Bees (Disappearing):
   enabled: false
-  tags:
-  - other
+  # tags:
+  # - other
   hp: 100
   level: 99
   limiter: 12
@@ -1635,6 +1635,7 @@ Cloud:
     - disablecamera
   tags:
   - cups
+  - cant_invuln
   msn_replace_allowed: false
   obj_id: 2297
   size: 1.9
@@ -2628,6 +2629,7 @@ Hades Cups:
   - cups
   - rc_blocked # Technically just Hades II but idk
   - needs_teleport
+  - needs_invuln
   enabled: true
   enmp_index: 0xB1
   hp: 100
@@ -2665,6 +2667,8 @@ Hades Escape:
     source: old
     replacements:
       obj_id: obj_id
+  tags:
+  - needs_invuln
   enabled: true
   enmp_index: 18
   hp: 100
@@ -2692,6 +2696,8 @@ Hades I:
     source: old
     replacements:
       obj_id: obj_id
+  tags: 
+  - needs_invuln
   variationof: Hades II
   enabled: true
   enmp_index: 18
@@ -2715,6 +2721,8 @@ Hades II:
     source: old
     replacements:
       obj_id: obj_id
+  tags:
+  - needs_invuln
   enabled: true
   enmp_index: 18
   hp: 100
@@ -2792,6 +2800,7 @@ Hayner:
     type: obj
   enabled: true
   tags:
+  - needs_invuln
   - roxas
   - sourcemaxhp
   - onetooneonly
@@ -3296,6 +3305,7 @@ Leon:
   type: boss
   tags:
   - cups
+  - cant_invuln
   variations:
     Leon:
       roomData:
@@ -4508,6 +4518,7 @@ Seifer:
   enabled: true
   enmp_index: 0x87
   tags:
+  - needs_invuln
   - roxas
   - sourcemaxhp
   - teleport_blocked
@@ -4650,6 +4661,7 @@ Setzer:
   enabled: true
   enmp_index: 0x9E
   tags:
+  - needs_invuln
   - roxas
   - sourcemaxhp
   - onetooneonly
@@ -5304,6 +5316,7 @@ Tifa:
     - disablecamera
   tags:
   - cups
+  - cant_invuln
   size: 1.32
   type: boss
   variations:
@@ -5506,6 +5519,7 @@ Vivi:
   - roxas
   - sourcemaxhp
   - onetooneonly
+  - needs_invuln
   - teleport_blocked
   hp: 100
   level: 99
@@ -5727,6 +5741,7 @@ Yuffie:
     - disablecamera
   tags:
   - cups
+  - cant_invuln
   size: 0.95
   type: boss
   variations:
